--- a/bookstore/src/main/webapp/newBook.xhtml
+++ b/bookstore/src/main/webapp/newBook.xhtml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html">
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core">
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>New Book</title>
@@ -21,14 +22,31 @@
 				<h:inputText id="type" value="#{bookBean.book.type}" />
 
 				<h:outputLabel value="Release date:" for="date" />
-				<h:inputText id="date" value="#{bookBean.book.date}"/>
+				<h:inputText id="date" value="#{bookBean.book.date}" />
 
 				<h:outputLabel value="Price:" for="price" />
-				<h:inputText id="price" value="#{bookBean.book.price}"/>
+				<h:inputText id="price" value="#{bookBean.book.price}" />
 
 				<h:commandButton value="create" action="#{bookBean.create}" />
 
 			</h:panelGrid>
+		</fieldset>
+		<fieldset>
+		
+			<legend>Author datas:</legend>
+			<h:outputLabel value="Choose the author:" for="author" />
+			<h:selectOneMenu value="#{bookBean.authorId}">
+				<f:selectItems value="#{bookBean.authors}" var="author"
+					itemLabel="#{author.name}" itemValue="#{author.id}" />
+			</h:selectOneMenu>
+			<h:commandButton value="add author" action="#{bookBean.saveAuthor}" />
+			<h3>Authors:</h3>
+			<h:dataTable value="#{bookBean.book.authors}" var="author">
+				<h:column>
+					<h:outputText value="#{author.name}" />
+				</h:column>
+			</h:dataTable>
+			
 		</fieldset>
 	</h:form>
 
