--- a/bookstore/src/main/webapp/newBook.xhtml
+++ b/bookstore/src/main/webapp/newBook.xhtml
@@ -2,104 +2,106 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core">
-<h:head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>New Book</title>
-</h:head>
-<h:body>
-	<h1>New Book</h1>
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets">
 
-	<h:form>
+<ui:composition template="_template.xhtml">
 
-		<h:messages id="validationMessages" />
+	<ui:define name="title">New Book</ui:define>
 
-		<fieldset>
-			<legend>Book datas:</legend>
-			<h:panelGrid columns="2">
-				<h:outputLabel value="Title:" for="title" />
-				<h:inputText id="title" value="#{bookBean.book.title}"
-					required="true" requiredMessage="The title can't be empty"
-					validatorMessage="The title must be between 3 and 40 characters">
-					<f:validateLength maximum="40" minimum="3" />
-					<f:ajax event="blur" render="validationMessages" />
-				</h:inputText>
+	<ui:define name="context">
 
-				<h:outputLabel value="Type:" for="type" />
-				<h:inputText id="type" value="#{bookBean.book.type}" required="true"
-					requiredMessage="The type can't be empty">
-					<f:ajax event="blur" render="validationMessages" />
-				</h:inputText>
+		<h:form>
 
-				<h:outputLabel value="Release date:" for="date" />
-				<h:inputText id="date" value="#{bookBean.book.date}"
-					validator="#{bookBean.mustBeValidDateValidator}" required="true"
-					requiredMessage="The release date can't be empty">
-					<f:ajax event="blur" render="validationMessages" />
-				</h:inputText>
+			<h:messages id="validationMessages" />
 
-				<h:outputLabel value="Price:" for="price" />
-				<h:inputText id="price" value="#{bookBean.book.price}"
-					validator="#{bookBean.mustBePositiveNumberValidator}"
-					required="true" requiredMessage="The price can't be empty">
-					<f:ajax event="blur" render="validationMessages" />
-				</h:inputText>
+			<fieldset>
+				<legend>Book datas:</legend>
+				<h:panelGrid columns="2">
+					<h:outputLabel value="Title:" for="title" />
+					<h:inputText id="title" value="#{bookBean.book.title}"
+						required="true" requiredMessage="The title can't be empty"
+						validatorMessage="The title must be between 3 and 40 characters">
+						<f:validateLength maximum="40" minimum="3" />
+						<f:ajax event="blur" render="validationMessages" />
+					</h:inputText>
 
-				<h:commandButton value="create" action="#{bookBean.create}">
-					<f:ajax execute="@form" render="@form :booksTable"/>
+					<h:outputLabel value="Type:" for="type" />
+					<h:inputText id="type" value="#{bookBean.book.type}"
+						required="true" requiredMessage="The type can't be empty">
+						<f:ajax event="blur" render="validationMessages" />
+					</h:inputText>
+
+					<h:outputLabel value="Release date:" for="date" />
+					<h:inputText id="date" value="#{bookBean.book.date}"
+						validator="#{bookBean.mustBeValidDateValidator}" required="true"
+						requiredMessage="The release date can't be empty">
+						<f:ajax event="blur" render="validationMessages" />
+					</h:inputText>
+
+					<h:outputLabel value="Price:" for="price" />
+					<h:inputText id="price" value="#{bookBean.book.price}"
+						validator="#{bookBean.mustBePositiveNumberValidator}"
+						required="true" requiredMessage="The price can't be empty">
+						<f:ajax event="blur" render="validationMessages" />
+					</h:inputText>
+
+					<h:commandButton value="create" action="#{bookBean.create}">
+						<f:ajax execute="@form" render="@form :booksTable" />
+					</h:commandButton>
+				</h:panelGrid>
+			</fieldset>
+
+			<fieldset>
+				<legend>Author datas:</legend>
+				<h:outputLabel value="Choose the author:" for="author" />
+				<h:selectOneMenu value="#{bookBean.authorId}" id="author">
+					<f:selectItems value="#{bookBean.authors}" var="author"
+						itemLabel="#{author.name}" itemValue="#{author.id}" />
+				</h:selectOneMenu>
+				<h:commandButton value="add author" action="#{bookBean.saveAuthor}">
+					<f:ajax execute="author" render="authorsTable validationMessages" />
 				</h:commandButton>
-			</h:panelGrid>
-		</fieldset>
+
+				<br />
+
+				<h:commandLink value="Add a new author"
+					action="#{bookBean.goToAuthorForm}" immediate="true" />
+
+				<h3>Authors:</h3>
+				<h:dataTable value="#{bookBean.book.authors}" var="author"
+					id="authorsTable">
+					<h:column>
+						<h:outputText value="#{author.name}" />
+					</h:column>
+				</h:dataTable>
+			</fieldset>
+		</h:form>
 
 		<fieldset>
-			<legend>Author datas:</legend>
-			<h:outputLabel value="Choose the author:" for="author" />
-			<h:selectOneMenu value="#{bookBean.authorId}" id="author">
-				<f:selectItems value="#{bookBean.authors}" var="author"
-					itemLabel="#{author.name}" itemValue="#{author.id}" />
-			</h:selectOneMenu>
-			<h:commandButton value="add author" action="#{bookBean.saveAuthor}">
-				<f:ajax execute="author" render="authorsTable validationMessages" />
-			</h:commandButton>
-			
-			<br />
-			
-			<h:commandLink value="Add a new author" action="#{bookBean.goToAuthorForm}" immediate="true" />
-			
-			<h3>Authors:</h3>
-			<h:dataTable value="#{bookBean.book.authors}" var="author"
-				id="authorsTable">
+			<legend>List of books:</legend>
+			<h:dataTable value="#{bookBean.books}" var="book" id="booksTable">
 				<h:column>
-					<h:outputText value="#{author.name}" />
+					<f:facet name="header">Title</f:facet>
+					<h:outputText value="#{book.title}" />
+				</h:column>
+				<h:column>
+					<f:facet name="header">Type</f:facet>
+					<h:outputText value="#{book.type}" />
+				</h:column>
+				<h:column>
+					<f:facet name="header">Release Date</f:facet>
+					<h:outputText value="#{book.date}" />
+				</h:column>
+				<h:column>
+					<f:facet name="header">Price</f:facet>
+					<h:outputText value="#{book.price}">
+						<f:convertNumber type="currency" pattern="R$ #0.00"
+							currencySymbol="R$" locale="pt_BR" />
+					</h:outputText>
 				</h:column>
 			</h:dataTable>
 		</fieldset>
-	</h:form>
-
-	<fieldset>
-		<legend>List of books:</legend>
-		<h:dataTable value="#{bookBean.books}" var="book" id="booksTable">
-			<h:column>
-				<f:facet name="header">Title</f:facet>
-				<h:outputText value="#{book.title}" />
-			</h:column>
-			<h:column>
-				<f:facet name="header">Type</f:facet>
-				<h:outputText value="#{book.type}" />
-			</h:column>
-			<h:column>
-				<f:facet name="header">Release Date</f:facet>
-				<h:outputText value="#{book.date}" />
-			</h:column>
-			<h:column>
-				<f:facet name="header">Price</f:facet>
-				<h:outputText value="#{book.price}">
-					<f:convertNumber type="currency" pattern="R$ #0.00"
-						currencySymbol="R$" locale="pt_BR" />
-				</h:outputText>
-			</h:column>
-		</h:dataTable>
-	</fieldset>
-
-</h:body>
+	</ui:define>
+</ui:composition>
 </html>
